# kube-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  JULES_TASKS.md  Makefile  README.md  TODO.md  claude.md  context.tmp.txt  examples.yaml  k3d-config.yaml  pyproject.toml  pytest.ini  working.md
.github/workflows/: ci.yml  release.yml
crd/: examples.yaml  mcpprompt-crd.yaml  mcpresource-crd.yaml  mcpserver-crd.yaml  mcptool-crd.yaml
docs/: DOGFOODING.md  GIT_STRATEGY.md
examples/crane-tool/: Dockerfile  go.mod  go.sum  main.go
examples/crane-tool/manifests/base/: crane-tool-backend.yaml  example-resources.yaml  kustomization.yaml
examples/crane-tool/manifests/overlays/k3d/: kustomization.yaml
examples/dns-tool/: Dockerfile  REPORT.md  go.mod  main.go
examples/dns-tool/manifests/base/: dns-tool-backend.yaml  example-resources.yaml  kustomization.yaml
examples/echo-server/: Dockerfile  pyproject.toml
examples/echo-server/manifests/: echo-backend.yaml  example-resources.yaml  kustomization.yaml  namespace.yaml
examples/hash-tool/: .gitignore  Dockerfile  REPORT.md  go.mod  main.go  main_test.go
examples/hash-tool/manifests/base/: example-resources.yaml  hash-tool-backend.yaml  kustomization.yaml
examples/kube-info-tool/: Dockerfile  go.mod  main.go
examples/kube-info-tool/manifests/base/: example-resources.yaml  kube-info-tool-backend.yaml  kustomization.yaml
examples/kubectl-explain/: Dockerfile  go.mod  main.go
examples/kubectl-explain/manifests/base/: example-resources.yaml  kubectl-explain-backend.yaml  kustomization.yaml
examples/time-tool/: Dockerfile  REPORT.md  go.mod  main.go
examples/time-tool/manifests/base/: example-resources.yaml  kustomization.yaml  time-tool-backend.yaml
examples/weather-tool/: Dockerfile  REPORT.md  go.mod  main.go
examples/weather-tool/manifests/base/: example-resources.yaml  kustomization.yaml  weather-tool-backend.yaml
manifests/base/: kustomization.yaml  namespace.yaml  operator.yaml  redis.yaml
manifests/base/crds/: kustomization.yaml  mcpprompt-crd.yaml  mcpresource-crd.yaml  mcpserver-crd.yaml  mcptool-crd.yaml
manifests/base/rbac/: cluster-role-binding.yaml  cluster-role.yaml  kustomization.yaml  service-account.yaml
manifests/examples/: test-resources.yaml
manifests/overlays/dev/: kustomization.yaml
manifests/overlays/k3d/: kustomization.yaml
manifests/overlays/production/: kustomization.yaml
samples/echo-server/src/: main.py
scripts/: build_multiarch.sh  k3d-cluster.sh  scaffold-tool.sh
src/: __init__.py  main.py
src/controllers/: __init__.py  mcpprompt_controller.py  mcpresource_controller.py  mcpserver_controller.py  mcptool_controller.py
src/models/: __init__.py  crds.py
src/utils/: __init__.py  k8s_client.py  metrics.py  redis_client.py
tests/: __init__.py  conftest.py
tests/integration/: README.md  __init__.py  conftest.py  test_aggregation.py  test_mcpserver_e2e.py
tests/unit/: __init__.py  test_k8s_client.py  test_mcpprompt_controller.py  test_mcpresource_controller.py  test_mcpserver_controller.py  test_mcptool_controller.py  test_metrics.py  test_redis_client.py
(+6 files in other folders)
