[project]
name = "mcp-echo-server"
version = "0.1.0"
description = "Echo/Debug MCP Server for testing the kube-mcp operator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
